# pctrl

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  config.example.yml  deploy.sh  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  landing.yml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  main.rs  style.rs  tui.rs
apps/cli/src/handlers/: credential.rs  database.rs  domain.rs  migrate.rs  mod.rs  project.rs  script.rs  server.rs
apps/cli/src/handlers/legacy/: coolify.rs  docker.rs  git.rs  mod.rs  ssh.rs
apps/cli/src/tui/: app.rs  checks.rs  input.rs  mod.rs  types.rs  ui.rs
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/docs-api/: .env.example  Dockerfile  README.md  clean-docs.ts  package.json  seed-all.ts  seed-changelog.ts  seed-docs.ts  seed-roadmap.ts  tsconfig.json
apps/docs-api/src/: db.ts  index.ts  sync.ts
apps/docs-api/src/routes/: changelog.ts  docs.ts  roadmap.ts  sync.ts
apps/landing/: DEPLOYMENT.md  Dockerfile  astro.config.mjs  nginx.conf  package.json
apps/landing/.astro/: data-store.json  settings.json
apps/landing/src/: env.d.ts
apps/landing/src/layouts/: Layout.astro
apps/landing/src/pages/: changelog.astro  index.astro
apps/landing/src/pages/docs/: [slug].astro  index.astro
apps/landing/src/utils/: changelog-parser.ts  docs-api.ts  markdown.ts  roadmap-parser.ts
apps/mobile/: App.tsx  app.json  package.json
crates/coolify/: Cargo.toml
crates/coolify/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/types/: config.rs  container.rs  credential.rs  database.rs  domain.rs  error.rs  legacy.rs  mod.rs  project.rs  resource.rs  script.rs  server.rs
crates/core/tests/: integration_test.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  migrations.rs
crates/database/src/crud/: config.rs  coolify.rs  credential.rs  database_creds.rs  docker.rs  domain.rs  git.rs  mod.rs  project.rs  project_resources.rs  script.rs  server.rs  ssh.rs
crates/docker/: Cargo.toml
crates/docker/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: lib.rs
scripts/: sync-website.sh
