[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "apps/cli",
    "crates/core",
    "crates/database",
    "crates/ssh",
    "crates/docker",
    "crates/coolify",
    "crates/git",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["pctrl contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.25"
crossterm = "0.27"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
rusqlite = { version = "0.30", features = ["bundled"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# SSH
ssh2 = "0.9"

# Docker
bollard = "0.15"

# Git
git2 = "0.18"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
