[package]
name = "pctrl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pctrl"
path = "src/main.rs"

[dependencies]
pctrl-core = { path = "../../crates/core" }
pctrl-database = { path = "../../crates/database" }
pctrl-ssh = { path = "../../crates/ssh" }
pctrl-docker = { path = "../../crates/docker" }
pctrl-coolify = { path = "../../crates/coolify" }
pctrl-git = { path = "../../crates/git" }

clap.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
