[package]
name = "pctrl-coolify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pctrl-core = { path = "../core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
