[package]
name = "pctrl-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pctrl-core = { path = "../core" }
ssh2.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
