[package]
name = "pctrl-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
pctrl-core = { path = "../../../crates/core" }
pctrl-database = { path = "../../../crates/database" }
pctrl-ssh = { path = "../../../crates/ssh" }
pctrl-docker = { path = "../../../crates/docker" }
pctrl-coolify = { path = "../../../crates/coolify" }
pctrl-git = { path = "../../../crates/git" }

tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
